@@ -3,8 +3,9 @@
 # This script will delete the current version of ceInstall
 # and re-download them
 
-cd $JLAB_ROOT
-rm ceInstall_$JLAB_VERSION.tar.gz
-rm -rf $JLAB_VERSION/ce $JLAB_VERSION/install
+rm -f ceInstall_$JLAB_VERSION.tar.gz
+rm -rf ce install sbsInstall
 wget http://www.jlab.org/12gev_phys/packages/sources/ceInstall/ceInstall_$JLAB_VERSION.tar.gz
-tar -zxpvf ceInstall_$JLAB_VERSION.tar.gz
+tar -zxpf ceInstall_$JLAB_VERSION.tar.gz
+mv ceInstall/* .
+rm -rf ceInstall*
