@@ -10,7 +10,7 @@
 
 <html>
     
-    <h2> Software installation instructions (JLAB_VERSION devel) </h2>
+    <h2> Software installation instructions (JLAB_VERSION vvversiontoreplaceee) </h2>
     
     These instructions are verified on:
     <ul> <b>Linux:</b></ul>
@@ -26,9 +26,9 @@
 		<li> High Sierra</li>
     </ul>
     <br>
-    These are instructions to install JLAB_VERSION devel. You can find supported JLAB_VERSION releases instructions below:<br>
+    These are instructions to install JLAB_VERSION vvversiontoreplaceee. You can find supported JLAB_VERSION releases instructions below:<br>
     <ul>
-		<li> <a href="https://www.jlab.org/12gev_phys/packages/sources/ceInstall/devel_install.html"> Development Version</a><br></li>
+		<li> <a href="https://www.jlab.org/12gev_phys/packages/sources/ceInstall/vvversiontoreplaceee_install.html"> Development Version</a><br></li>
 		<li> <a href="https://www.jlab.org/12gev_phys/packages/sources/ceInstall/2.2_install.html"> Version 2.2</a><br></li>
 		<li> <a href="https://www.jlab.org/12gev_phys/packages/sources/ceInstall/2.1_install.html"> Version 2.1</a><br></li>
 		<li> <a href="https://www.jlab.org/12gev_phys/packages/sources/ceInstall/2.0_install.html"> Version 2.0</a><br></li>
@@ -160,7 +160,7 @@
             Create the working directory:
             
             <pre>
-                mkdir -p $JLAB_ROOT/devel
+                mkdir -p $JLAB_ROOT/vvversiontoreplaceee
             </pre>
             
             
@@ -171,8 +171,8 @@
         <li>Get the installation scripts:
             <pre>
                 cd $JLAB_ROOT
-                wget http://www.jlab.org/12gev_phys/packages/sources/ceInstall/ceInstall_devel.tar.gz
-				tar -zxpvf ceInstall_devel.tar.gz --strip-components 1 -C devel
+                wget http://www.jlab.org/12gev_phys/packages/sources/ceInstall/ceInstall_vvversiontoreplaceee.tar.gz
+				tar -zxpvf ceInstall_vvversiontoreplaceee.tar.gz --strip-components 1 -C vvversiontoreplaceee
             </pre>
             
         </li>
@@ -183,7 +183,7 @@
             
             <pre>
                 setenv JLAB_ROOT /opt/jlab_software
-                source $JLAB_ROOT/devel/ce/jlab.csh
+                source $JLAB_ROOT/vvversiontoreplaceee/ce/jlab.csh
             </pre>
             
         </li>
@@ -191,25 +191,25 @@
         
         <li>Start a new shell. Now you should see a log similar to this
             <pre>
- > Common Environment Version: <devel>  (Wed March 18 2018)
+ > Common Environment Version: <vvversiontoreplaceee>  (Wed March 18 2018)
  > Running as mauri on 1.800.gemc.cool.org
  > OS Release:    Darwin_macosx10.13-x86_64-clang9.0.0
  > JLAB_ROOT set to:     /opt/jlab_software
- > '/opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0' is not a directory. Creating it.
+ > '/opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0' is not a directory. Creating it.
 
- !! Attention:  BANKS  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/banks/1.4/bin  not found
- !! Attention:  CCDB  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/ccdb/ccdb-1.06.02/lib  not found
- !! Attention:  CLHEP  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/clhep/2.3.4.5/lib  not found
- !! Attention:  EVIO  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/evio/5.1/bin  not found
- !! Attention:  GEANT4  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/geant4/4.10.03.p02/bin  not found
- !! Attention:  GEMC  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/gemc/2.7/gemc  not found
- !! Attention:  JANA  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/jana/0.7.7p1/bin/jana  not found
- !! Attention:  MLIBRARY  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/mlibrary/1.2/lib  not found
- !! Attention:  MYSQL  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/mysql/lib  not found
- !! Attention:  QT    installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/qt/5.9.1/5.9.1/clang_64/lib  not found
- !! Attention:  ROOT  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/root/6.12.06/bin/root-config  not found
- !! Attention:  SCONS  installation check /opt/jlab_software/devel/scons_bm/1.6/site_tools  not found
- !! Attention:  XERCESC  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/xercesc/3.2.0/lib  not found
+ !! Attention:  BANKS  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/banks/1.4/bin  not found
+ !! Attention:  CCDB  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/ccdb/ccdb-1.06.02/lib  not found
+ !! Attention:  CLHEP  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/clhep/2.3.4.5/lib  not found
+ !! Attention:  EVIO  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/evio/5.1/bin  not found
+ !! Attention:  GEANT4  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/geant4/4.10.03.p02/bin  not found
+ !! Attention:  GEMC  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/gemc/2.7/gemc  not found
+ !! Attention:  JANA  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/jana/0.7.7p1/bin/jana  not found
+ !! Attention:  MLIBRARY  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/mlibrary/1.2/lib  not found
+ !! Attention:  MYSQL  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/mysql/lib  not found
+ !! Attention:  QT    installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/qt/5.9.1/5.9.1/clang_64/lib  not found
+ !! Attention:  ROOT  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/root/6.12.06/bin/root-config  not found
+ !! Attention:  SCONS  installation check /opt/jlab_software/vvversiontoreplaceee/scons_bm/1.6/site_tools  not found
+ !! Attention:  XERCESC  installation check /opt/jlab_software/vvversiontoreplaceee/Darwin_macosx10.13-x86_64-clang9.0.0/xercesc/3.2.0/lib  not found
 			</pre>
             
         </li>
@@ -217,14 +217,14 @@
         Notice: if you already have some existing environment variables that you want to keep,
         use the option "keepmine":<br>
         <pre>
-            source $JLAB_ROOT/devel/ce/jlab.csh keepmine
+            source $JLAB_ROOT/vvversiontoreplaceee/ce/jlab.csh keepmine
         </pre>
         
         
         <li>
             Choose the packages you wish to install by executing the corresponding script:
             <pre>
-                cd $JLAB_ROOT/devel/install
+                cd $JLAB_ROOT/vvversiontoreplaceee/install
                 
                 ./go_clhep
                 ./go_xercesc
